--- a/public/notes.html
+++ b/public/notes.html
@@ -44,6 +44,6 @@
         </div>
       </div>
     </div>
-    <script src="./index.html"></script>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
