readme.md added

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
   <div class="container">
     <div style="margin-top: 80px;" class="jumbotron text-center">
       <h1 class="display-4">Marc's Note Taker <span role="img" aria-label="Memo">📝</span></h1>
-      <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Get Started</a>
+      <a class="btn btn-primary btn-lg mt-4" href="./notes.html" role="button">Get Started</a>
     </div>
   </div>
-  <script src="/assets/js/index.js"></script>
+  <script src="/11 Marcs-Note-Taker/public/assets/js/index.js"></script>
   <script src="./notes.html"></script>
 </body>
 
