--- a/public/notes.html
+++ b/public/notes.html
@@ -15,7 +15,7 @@
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/Homework/11 Marcs-Note-Taker/public/assets/css/styles.css" />
+    <link rel="stylesheet" href="/11 Marcs-Note-Taker/marcs-note-taker/public/assets/css/styles.css" />
   </head>
 
   <body>
